Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-1722

Clients that don't Fetch can cause Impala to busy spin in ScannerThreads

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 2.1
    • Impala 2.2
    • None
    • None

    Description

      The scanner thread registers with the token mgr in Prepare() (Execute from the client) and doesn't issue work to the io_mgr until GetNext() (Fetch from the client). After registering with the token mgr, the token mgr will offer tokens (HdfsScanNode::ThreadAvailableCb) which spins up scanner threads. Since there are no ranges issued, the scanner threads busy spin keeping a core busy per thread.

      This is bad anytime there is a large gap between Prepare/Open() and GetNext(). This can happen because the client went away (spinning until query timeout) or other parts of the plan take a long time (i.e. processing the build side of a join).

      Attachments

        1. patch.txt
          0.8 kB
          Nong Li

        Issue Links

          Activity

            People

              ippokratis Ippokratis Pandis
              nong_impala_60e1 Nong Li
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: