IMPALA-1722: ScannerThreads spin after Prepare and until initial ranges are issued

The scanner threads register with the token mgr in Prepare() (or Execute from the client)
and do not issue work to the IO mgr until GetNext() (or Fetch from the client). After
registering with the token mgr, the token mgr will offer tokens which spin up scanner
threads. Since there are no ranges issued, the scanner threads get into busy spinning
keeping a core busy per thread.

This is bad anytime there is a large gap between Prepare/Open() and GetNext() (or Execute
and Fetch from the client). This can happen, for example, in cases where the client goes
away or other parts of the plan take a long time, e.g. processing the build side of a join.

This patch fixes the problem by not offering tokens when an initial set of ranges has not
been issued. Testing it is a bit tricky, as we need to monitor the utilization of the
cores.

Change-Id: I6503d36e5018c41944baa98b178b50340c2c9c67
Reviewed-on: http://gerrit.sjc.cloudera.com:8080/5894
Reviewed-by: Ippokratis Pandis <ipandis@cloudera.com>
Tested-by: jenkins