be/src/exec/hdfs-parquet-scanner.h
@@ -125,8 +125,7 @@ class HdfsParquetScanner : public HdfsScanner {
   RuntimeProfile::Counter* num_cols_counter_;
 
   // Reads data from all the columns (in parallel) and assembles rows into the context
-  // object.
-  // Returns when the entire row group is complete or an error occurred.
+  // object. Returns when the entire row group is complete or an error occurred.
   Status AssembleRows(int row_group_idx);
 
   // Process the file footer and parse file_metadata_.  This should be called with the
